<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:columnOrderPreserved="false"
    android:useDefaultMargins="true">

        <android.support.v7.widget.AppCompatTextView
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:text="@string/offline"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_columnWeight="1"
            android:text="@string/b_1via"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_columnWeight="1"
            android:text="@string/b_1v1" />

        <android.support.v7.widget.AppCompatButton
            android:layout_columnWeight="1"
            android:layout_columnSpan="2"
            android:layout_marginBottom="50dp"
            android:text="@string/b_tvt" />



        <android.support.v7.widget.AppCompatTextView
            android:layout_columnWeight="1"
            android:layout_columnSpan="2"
            android:text="@string/online"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_columnWeight="1"
            android:layout_columnSpan="2"
            android:text="@string/b_1v1_online" />
</GridLayout>