<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/gameView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/infoBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/infoTeam"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLefttOf="@+id/infoLives"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/team" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/infoLives"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/infoTeam"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/lives" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/infoPlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/InfoScore"
            app:layout_constraintTop_toBottomOf="@+id/infoTeam"
            android:text="@string/player" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/InfoScore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/infoPlayer"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoLives"
            android:text="@string/score" />
    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoBar"
        android:text="@string/offline"/>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/answerBlock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/answerBtn1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLefttOf="parent"
            app:layout_constraintRight_toLefttOf="@+id/answerBtn2"
            app:layout_constraintBottom_toTopOf="@+id/answerBtn3"
            android:text="@string/b_1v1_online" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/answerBtn2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/answerBtn1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/answerBtn4"
            android:text="@string/b_1v1_online" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/answerBtn3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLefttOf="parent"
            app:layout_constraintRight_toLefttOf="@id/answerBtn4"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/b_1v1_online" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/answerBtn4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/answerBtn3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/b_1v1_online" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>